Feat/api 4 reading alert configs (#96)
