# api/docs/openapi.yaml
@@ -592,23 +592,15 @@ paths:
                     active: true
                     on_late: true
                     on_error: false
-                    monitor_ids:
-                      - cfe88463-5c04-4b43-b10f-1f508963cc5d
-                      - e534a01a-4efe-4b8e-9b04-44a3c76b0462
-                    type:
-                      slack:
-                        channel: "#cron-alerts"
-                        token: a-slack-bot-oauth-token
+                    monitors: 2
+                    type: slack
                   - alert_config_id: b1fd4478-46bd-4edd-adb2-5aa816784241
                     name: Webhook alerts for errors
                     active: true
                     on_late: false
                     on_error: true
-                    monitor_ids:
-                      - cfe88463-5c04-4b43-b10f-1f508963cc5d
-                    type:
-                      webhook:
-                        url: http://example.com/errors/callback
+                    monitors: 1
+                    type: webhook
         "400":
           $ref: "#/components/responses/BadRequestError"
         "500":
@@ -936,23 +928,15 @@ paths:
                     active: true
                     on_late: true
                     on_error: false
-                    monitor_ids:
-                      - cfe88463-5c04-4b43-b10f-1f508963cc5d
-                      - e534a01a-4efe-4b8e-9b04-44a3c76b0462
-                    type:
-                      slack:
-                        channel: "#cron-alerts"
-                        token: a-slack-bot-oauth-token
+                    monitors: 2
+                    type: slack
                   - alert_config_id: b1fd4478-46bd-4edd-adb2-5aa816784241
                     name: Webhook alerts for errors
                     active: true
                     on_late: false
                     on_error: true
-                    monitor_ids:
-                      - cfe88463-5c04-4b43-b10f-1f508963cc5d
-                    type:
-                      webhook:
-                        url: http://example.com/errors/callback
+                    monitors: 1
+                    type: webhook
         "400":
           $ref: "#/components/responses/BadRequestError"
         "404":
@@ -1388,6 +1372,7 @@ components:
         - active
         - on_late
         - on_error
+        - monitors
         - type
       properties:
         alert_config_id:
@@ -1408,6 +1393,9 @@ components:
         on_error:
           type: boolean
           description: Whether or not the configured alerts should be sent for jobs that exhibit an error
+        monitors:
+          type: number
+          description: The number of Monitors this alert configuration is applied to
         type:
           type: string
           enum:
